        listing keys for modes other than Normal, filtering the output
        and linking to source locations).
      - Added :cookies command.
      * :extadd now supports remote URLs as well as local files on Firefox 4.
      * Added :if/:elseif/:else/:endif conditionals.
      - Added -keyword, -tags, -title to :delbmarks.
      - Added :extupdate command.
      - Added :feedkeys command.
      - Added several new options, including -javascript, to :abbrev and :map.
      - Added :mksyntax command.
      - :open now only opens files beginning with /, ./, ../, or ~/
      - Added :write !cmd and :write >>file.
      - Added :yank command.
    * Improvements to :style and :highlight:
      - Added -agent flag to :style.
      - The -append flag now updates existing properties rather than
        simply appending its arguments to the previous value.
      - Active filters are not highlighted in :style listings
      - :style-related commands now divide their completions between
        those active and inactive for the current site.
      - CSS property name completion is not available
    * IMPORTANT option changes:
      - 'cdpath' and 'runtimepath' no longer treat ",,"
        specially. Use "." instead.
      - 'incsearch', 'hlsearch', 'ignorecase', and 'smartcase' have
        been replaced with 'incfind', 'hlfind', and 'findcase'
      - 'extendedhinttags' is now a regexpmap rather than a
        string.
      - 'guioptions' default value has changed.
      - 'laststatus' has been replaced with the "s" flag in
        'guioptions'.
      - 'linksearch' has been removed.  The \l search modifier can
        still be used for this purpose.
      - 'loadplugins' is now a regexplist option rather than
        a boolean.
      - 'mapleader' is now an option rather than a :let
        variable.
      - 'showstatuslinks' is now a string option.
    * IMPORTANT: Command script files now use the *.penta file extension.